sumo/tests/netgen/junction_types/errors/junction_type_actuated_tls/spider/errors.netgen
Error: Only the following junction types are known: traffic_light, priority, right_before_left
Quitting (on error).
